--- a/app/src/main/res/layout/item_right_chat.xml
+++ b/app/src/main/res/layout/item_right_chat.xml
@@ -1,47 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:paddingTop="12dp"
-    android:paddingBottom="12dp"
+    android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
+    android:orientation="horizontal"
 
     >
 
-
-    <TextView
-        android:id="@+id/content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:paddingLeft="16dp"
-        android:paddingTop="4dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="4dp"
-        android:text="내가 보낸 메세지"
-        android:background="@drawable/only_rounded"
-        android:backgroundTint="#FFEB3B"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
 
         />
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:text="00:00"
-        android:textColor="#b9bcce"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/content"
-        app:layout_constraintEnd_toStartOf="@+id/content"
-        />
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:text="00:00"
+            android:textColor="#b9bcce"
+            android:textSize="10sp"
+
+            />
+
+        <TextView
+            android:id="@+id/content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/only_rounded"
+            android:backgroundTint="#FFEB3B"
+            android:paddingLeft="16dp"
+            android:paddingTop="4dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="4dp"
+            android:maxWidth="200dp"
+            android:text="내가 보낸 메세지"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+    </LinearLayout>
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
