개인작품 최종마무리 알림까지 함. (안드로이드 알림에서 보완할 부분 있음 시간날 때 서비스랑 알림부분 더 공부해보자)

--- a/app/src/main/res/layout/item_chat_list.xml
+++ b/app/src/main/res/layout/item_chat_list.xml
@@ -25,7 +25,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:id="@+id/chat_image"
-                android:src="@drawable/only_rounded"
+                android:src="@drawable/oven"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
