--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -61,32 +61,36 @@
             android:orientation="vertical">
 
 
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="20dp"
-                android:background="@drawable/image"
-                android:backgroundTint="#959595" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
+                android:padding="5dp"
+
+
+                android:background="@drawable/only_rounded"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/image"
+                    android:backgroundTint="#959595" />
 
                 <EditText
                     android:id="@+id/chat"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:maxHeight="100dp"
                     android:layout_weight="1"
-                    android:background="@drawable/only_rounded"
-                    android:lines="4"
                     android:scrollbars="vertical"
                     android:textColor="@color/black"
+                    android:backgroundTint="#00FFFFFF"
                     android:textSize="13sp" />
 
 
