--- a/app/src/main/res/layout/item_user_list.xml
+++ b/app/src/main/res/layout/item_user_list.xml
@@ -6,21 +6,33 @@
     android:layout_marginBottom="10dp"
     >
 
+
+
         <ImageView
             android:id="@+id/profile"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="5dp"
             android:src="@drawable/cafe1"
             android:layout_gravity="center"
             />
+
+                <ImageView
+                    android:id="@+id/host"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/crown"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    />
 
         <TextView
             android:id="@+id/nickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
+            android:layout_marginStart="5dp"
             android:text="닉네임"
             android:textColor="#3E2807"
             android:textSize="16sp"
