--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginTop="15dp"
+        android:layout_margin="5dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,8 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-
-
+                android:layout_margin="5dp"
                 android:background="@drawable/only_rounded"
                 android:orientation="horizontal">
 
@@ -85,7 +85,7 @@
                 <EditText
                     android:id="@+id/chat"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:maxHeight="100dp"
                     android:layout_weight="1"
                     android:scrollbars="vertical"
@@ -96,13 +96,14 @@
 
                 <Button
                     android:id="@+id/register"
-                    android:layout_width="60dp"
-                    android:layout_height="35dp"
+                    android:layout_width="70dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="10dp"
                     android:background="@drawable/rounded"
                     android:text="전송"
-                    android:textSize="10sp" />
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
