--- a/app/src/main/res/layout/activity_find_cafe.xml
+++ b/app/src/main/res/layout/activity_find_cafe.xml
@@ -61,6 +61,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_margin="5dp"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
