--- a/app/src/main/res/layout/activity_place_result_items.xml
+++ b/app/src/main/res/layout/activity_place_result_items.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:text="카페명"
                 android:layout_gravity="center_vertical"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/black"
                 android:layout_marginEnd="15dp"
 
@@ -46,11 +46,12 @@
 
         <TextView
             android:layout_marginStart="60dp"
-            android:textSize="17sp"
+            android:textSize="20sp"
             android:id="@+id/road_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="주소"
+            android:textColor="@color/black"
             android:layout_marginBottom="15dp"
             android:layout_marginEnd="15dp"
             />
