--- a/app/src/main/res/layout/fragment_cafe_detail_data.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail_data.xml
@@ -9,6 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:layout_margin="5dp"
 
     >
 
@@ -17,7 +18,8 @@
         android:layout_height="wrap_content"
         android:text="카페 한 줄 소개"
         android:textColor="@color/black"
-        android:textSize="17dp"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         />
@@ -31,7 +33,7 @@
 
         android:text="카페 한 줄 소개"
         android:textColor="#FF9800"
-        android:textSize="14dp"
+        android:textSize="20dp"
         android:layout_marginStart="23dp"
         android:layout_marginEnd="20dp"
         />
@@ -40,15 +42,16 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="#27FFCD60" />
+        android:layout_height="1dp"
+        android:layout_margin="5dp"
+        android:background="#FF9800" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="상세정보"
         android:textColor="@color/black"
-        android:textSize="17dp"
+        android:textSize="25dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         />
@@ -64,8 +67,9 @@
         >
 
         <View
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="5dp"
             android:layout_marginEnd="5dp"
             android:background="@drawable/location"
             android:backgroundTint="#FF9800"
@@ -79,7 +83,7 @@
             android:layout_marginEnd="30dp"
             android:text="위치"
             android:textColor="@color/black"
-            android:textSize="14dp"
+            android:textSize="20dp"
              />
 
 
@@ -95,9 +99,10 @@
         >
 
         <View
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginEnd="5dp"
+            android:layout_margin="5dp"
             android:background="@drawable/call"
             android:backgroundTint="#FF9800"
             />
@@ -110,7 +115,7 @@
             android:layout_marginEnd="30dp"
             android:text="전화번호"
             android:textColor="@color/black"
-            android:textSize="14dp"
+            android:textSize="20dp"
             />
 
 
