--- a/app/src/main/res/layout/fragment_group_list.xml
+++ b/app/src/main/res/layout/fragment_group_list.xml
@@ -7,6 +7,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_margin="5dp"
         android:id="@+id/group_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,8 +26,5 @@
         android:layout_margin="20dp"
         />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+
 </FrameLayout>
