--- a/app/src/main/res/layout/fragment_join_group.xml
+++ b/app/src/main/res/layout/fragment_join_group.xml
@@ -7,6 +7,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/join_group_list"
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FFFFFF">
