--- a/app/src/main/res/layout/fragment_my_group.xml
+++ b/app/src/main/res/layout/fragment_my_group.xml
@@ -7,6 +7,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_margin="5dp"
         android:id="@+id/my_group_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
