--- a/app/src/main/res/layout/group_items.xml
+++ b/app/src/main/res/layout/group_items.xml
@@ -22,8 +22,8 @@
 
             <ImageView
                 android:background="@color/white"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:id="@+id/profile"
                 android:src="@drawable/person"
                 android:layout_marginStart="15dp"
@@ -46,8 +46,8 @@
                 android:layout_height="wrap_content"
                 android:text="모임제목"
                 android:layout_gravity="center_vertical"
-                android:textSize="17sp"
-                android:textColor="#3E2807"
+                android:textSize="25sp"
+                android:textColor="#000000"
                 android:layout_marginEnd="15dp"
                 />
 
@@ -57,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:text="카페명"
                     android:layout_gravity="center_vertical"
-                    android:textSize="17sp"
+                    android:textSize="20sp"
                     android:textColor="#3E2807"
                     android:layout_marginEnd="15dp"
                     />
@@ -68,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:text="날짜"
                     android:layout_gravity="center_vertical"
-                    android:textSize="17sp"
+                    android:textSize="20sp"
                     android:textColor="#3E2807"
                     android:layout_marginEnd="15dp"
                     />
@@ -163,7 +163,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="#27FFCD60"/>
+        android:layout_margin="5dp"
+        android:layout_height="1dp"
+        android:background="#FF9800"/>
 
 </LinearLayout>
