--- a/app/src/main/res/layout/item_cafe_review.xml
+++ b/app/src/main/res/layout/item_cafe_review.xml
@@ -7,6 +7,7 @@
     >
 
     <LinearLayout
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -31,7 +32,7 @@
             android:layout_marginEnd="10dp"
             android:text="닉네임"
             android:textColor="#3E2807"
-            android:textSize="13sp"
+            android:textSize="20sp"
             android:layout_gravity="center_vertical"
             />
 
@@ -42,7 +43,7 @@
             android:layout_marginEnd="1dp"
             android:text="2022.08.03"
             android:textColor="#3E2807"
-            android:textSize="8sp"
+            android:textSize="15sp"
             android:layout_gravity="center_vertical"
             />
 
@@ -109,7 +110,7 @@
         android:layout_marginEnd="10dp"
         android:text="유저의 리뷰 입니다"
         android:textColor="#3E2807"
-        android:textSize="15sp"
+        android:textSize="25sp"
         android:layout_gravity="center_vertical"
         android:layout_marginBottom="10dp"
         />
