--- a/app/src/main/res/layout/item_chat_list.xml
+++ b/app/src/main/res/layout/item_chat_list.xml
@@ -17,13 +17,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/teal_700"
             >
 
 
             <ImageView
                 android:background="@color/white"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:id="@+id/chat_image"
                 android:src="@drawable/oven"
                 android:layout_marginStart="15dp"
@@ -46,8 +48,8 @@
                     android:layout_height="wrap_content"
                     android:text="채팅제목"
                     android:layout_gravity="center_vertical"
-                    android:textSize="17sp"
-                    android:textColor="#110B02"
+                    android:textSize="30sp"
+                    android:textColor="#000000"
                     android:textStyle="bold"
                     android:layout_marginEnd="15dp"
                     />
@@ -59,8 +61,9 @@
                     android:layout_height="wrap_content"
                     android:text="마지막 채팅 내용"
                     android:layout_gravity="center_vertical"
-                    android:textSize="13sp"
-                    android:textColor="#3E2807"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:textColor="#0E0902"
                     android:layout_marginEnd="15dp"
                     />
 
@@ -71,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:text="날짜"
                     android:layout_gravity="center_vertical"
-                    android:textSize="10sp"
+                    android:textSize="15sp"
                     android:textColor="#3E2807"
                     android:layout_marginEnd="15dp"
                     />
@@ -88,8 +91,9 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="#27FFCD60"
+        android:layout_margin="5dp"
+        android:layout_height="2dp"
+        android:background="#F8BF44"
         />
 
 </LinearLayout>
