--- a/app/src/main/res/layout/item_left_chat.xml
+++ b/app/src/main/res/layout/item_left_chat.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/profile"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
          />
 
 <LinearLayout
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="이름"
         android:textColor="@color/black"
-        android:textSize="12sp"
+        android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/profile"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,8 +48,8 @@
         android:paddingRight="16dp"
         android:paddingBottom="4dp"
         android:text="보낸sdfs"
-        android:textColor="#333d4b"
-        android:textSize="12sp" />
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/time"
@@ -58,7 +58,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginBottom="4dp"
         android:text="00:00"
-        android:textColor="#b9bcce"
+        android:textColor="#52545E"
         android:textSize="10sp"
         />
 
