--- a/app/src/main/res/layout/item_left_image.xml
+++ b/app/src/main/res/layout/item_left_image.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/profile"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         />
 
     <LinearLayout
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:text="이름"
             android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/profile"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,8 +39,8 @@
             >
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="100dp"
-                android:layout_height="150dp"
+                android:layout_width="200dp"
+                android:layout_height="250dp"
                 android:background="@drawable/only_rounded"
                 android:maxWidth="200dp"
                 android:padding="3dp"
@@ -61,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:text="00:00"
-                    android:textColor="#b9bcce"
+                    android:textColor="#585963"
                     android:textSize="10sp"/>
 
             </LinearLayout>
