--- a/app/src/main/res/layout/item_right_chat.xml
+++ b/app/src/main/res/layout/item_right_chat.xml
@@ -21,9 +21,9 @@
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="7dp"
             android:text="00:00"
-            android:textColor="#b9bcce"
+            android:textColor="#727483"
             android:textSize="10sp"
 
             />
@@ -41,7 +41,7 @@
             android:maxWidth="200dp"
             android:text="내가 보낸 메세지"
             android:textColor="@color/black"
-            android:textSize="12sp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
 
